linked index.html to stylesheet

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet_about.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <head>
 
 </head>
