--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 
 <head>
 
+  <link rel="stylesheet" type="text/css" href="index_styles.css">
+  
 </head>
+  
+<header>
+    <nav>
+    <ul>
+      <li><a href="default.asp">About</a></li>
+      <li><a href="news.asp">Legends</a></li>
+      <li><a href="contact.asp">Donate</a></li>
+      <li><a href="about.asp">Contact</a></li>
+      <li><a href="default.asp">Event</a></li>
+      <li><a href="default.asp">Store</a></li>
+      <li><a href="default.asp">Blog</a></li>
+      <li><a href="default.asp">Share Your Legend</a></li>
+    </ul>
+</nav>
+
+  
+</header>
 
 <body>
 
