--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
 
   <link rel="stylesheet" type="text/css" href="index_styles.css">
-  
+
 </head>
-  
+<body>
+<p>hello</p>
+
 <header>
     <nav>
     <ul>
@@ -21,10 +23,9 @@
     </ul>
 </nav>
 
-  
+
 </header>
 
-<body>
 
 </body>
 
