--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
   <link rel="stylesheet" type="text/css" href="index_styles.css">
 
 </head>
+
+
+
 <body>
 <p>hello</p>
 
 <header>
     <nav>
     <ul>
-      <li><a href="default.asp">About</a></li>
-      <li><a href="news.asp">Legends</a></li>
-      <li><a href="contact.asp">Donate</a></li>
-      <li><a href="about.asp">Contact</a></li>
-      <li><a href="default.asp">Event</a></li>
-      <li><a href="default.asp">Store</a></li>
-      <li><a href="default.asp">Blog</a></li>
-      <li><a href="default.asp">Share Your Legend</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="legends.html">Legends</a></li>
+      <li><a href="">Donate</a></li>
+      <li><a href="a">Contact</a></li>
+      <li><a href="events.html">Event</a></li>
+      <li><a href="">Store</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Share Your Legend</a></li>
     </ul>
 </nav>
 
