--- a/events.html
+++ b/events.html
@@ -52,4 +52,37 @@
 
 </body>
 
+<footer>
+  <nav>
+
+  <!-- Social Media -->
+  <div class="media">
+  <!-- This links icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Add font awesome icons -->
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-instagram"></a>
+
+  </div>
+
+
+  <!-- Logo and header -->
+          <img class="logo" src="img/temp_logo.png">
+          <h1> Sports Legends</h1>
+  <!-- Nav links -->
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="legends.html">Legends</a></li>
+          <li><a href="">Donate</a></li>
+          <li><a href="a">Contact</a></li>
+          <li><a href="events.html">Event</a></li>
+          <li><a href="">Store</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Share Your Legend</a></li>
+        </ul>
+
+    </nav>
+</footer>
+
 </html>
