Fixing link to style sheet on each page
Also started adding text to events page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="index_styles.css">
+  <link rel="stylesheet" type="text/css" href="about_styles.css">
 
 <title> Sports </title>
 </head>
