--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="index_styles.css">
+  <link rel="stylesheet" type="text/css" href="events_styles.css">
 
 <title> Sports </title>
 </head>
@@ -48,9 +48,10 @@
 
   </header>
 
-
-
-</body>
+  <div>
+    <h2>SPORTS LEGEND BENEFIT GALA</h2>
+    <h3>Saturday, October 19 2019  |  6pm - 11pm</h3>
+  </div>
 
 <footer>
   <nav>
@@ -84,5 +85,5 @@
 
     </nav>
 </footer>
-
+</body>
 </html>
