--- a/legends.html
+++ b/legends.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="index_styles.css">
+  <link rel="stylesheet" type="text/css" href="legends_styles.css">
 
 <title> Sports </title>
 </head>
