--- a/index.html
+++ b/index.html
@@ -45,6 +45,41 @@
 
   </nav>
 
+<div><!-- hero image -->
+<img class="hero_image" src="img/temp_logo.png">
+
+</div>
+
+<!-- project -->
+<div class="project">
+
+  <div><!-- text -->
+    <h2>
+      SPORTS LEGENDS <br>
+      OF CLEVELAND PROJECT
+    </h2>
+
+
+    <div><!-- button -->
+
+      <p class="button">
+        More
+      </p>
+
+    <p>
+      The sports legends project is our catalogue of the great athletes who both graduated from and are still in our schools. From Olympic gold medalists to school championships we are all legends.
+    </p>
+
+
+  </div><!--Closes text -->
+
+
+</div><!-- close button -->
+
+
+</div><!-- Closes project -->
+
+
 
   </header>
 
