--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 <div class="project">
 
   <div><!-- text -->
-    <h2>
+
+    <h2 class="intro">
       SPORTS LEGENDS <br>
       OF CLEVELAND PROJECT
     </h2>
-
 
     <div><!-- button -->
 
@@ -66,18 +66,131 @@
         More
       </p>
 
+</div><!--Closes button -->
+
     <p>
       The sports legends project is our catalogue of the great athletes who both graduated from and are still in our schools. From Olympic gold medalists to school championships we are all legends.
     </p>
 
-
-  </div><!--Closes text -->
-
-
-</div><!-- close button -->
-
-
+</div><!-- close text -->
 </div><!-- Closes project -->
+
+<div> <!-- slideshow -->
+
+</div><!-- Closes slideshow -->
+
+
+
+<div class="month"> <!-- Month -->
+
+  <h2 class="month_intro">
+    CMSD LEGEND OF THE MONTH
+  </h2>
+
+  <p class="month_title">
+    Ron Addison
+  </p>
+
+<img class="month_photo" src="img/ronAddison.jpg">
+
+<div> <!-- About  -->
+
+  <p class="month_about">
+  I have always been proud that I was born and raised in Cleveland.  When people asked me where I am from I always say Cleveland, the city not the suburbs.  When I was growing up the big names in Cleveland Sports were Jim Brown and Rocky Colavito. I lived 6 miles from Cleveland Stadium where I would watch the Indiansplay with 2,000 people in the stands.My friends and I spent all fall playing football, all winter playing basketball outside and all spring and summer playing baseball.  I was naturally drawn to running.  I just always loved it.  My mom would give me a quarter and tell me to run down to the corner </p>
+
+</div><!-- Closes About -->
+</div><!-- Closes Month -->
+
+
+
+<div class="join"> <!-- Join -->
+
+  <h2 class="join_title">
+    Join Our Mission
+  </h2>
+
+  <p class="join_blurb">
+This project can’t be done without the help and support of our many followers. Join the growing numbers and become a sponsor of the Sports Legends of Cleveland project by clicking below and donating today to our   campaign. Donations of any and all sizes are welcome and greatly appreciated!</p>
+
+  <p class="join_button">
+    Support This Campaign
+  </p>
+
+</div><!-- Closes join -->
+
+
+
+<div class="info"><!-- More Info -->
+
+  <h2 class="info_title">
+    Gala
+  </h2>
+
+<div class="big_info"><!-- Big Info -->
+
+  <div class="one_info"><!-- 1 Info -->
+    <div class="info_subtitle">
+      <h3>
+        Legends
+      </h3>
+
+      <h4 class="info_blurb">
+        View the sports legends of cleveland history gallery. Learn their stories.
+      </h4>
+
+    </div>
+
+</div><!-- close 1 Info -->
+
+
+
+  <div class="two_info"><!-- 2 Info -->
+    <div class="info_subtitle">
+      <h3>
+        Gala
+      </h3>
+
+      <h4 class="info_blurb">
+        Get tickets, view information, and speakers for our upcoming gala.      </h4>
+
+    </div>
+
+</div><!-- close 2 Info -->
+
+
+
+  <div class="three_info"><!-- 3 Info -->
+    <div class="info_subtitle">
+      <h3>
+        Donate
+      </h3>
+
+      <h4 class="info_blurb">
+        Donate to our cause and help grow the legend.       </h4>
+
+    </div>
+
+</div><!-- close 3 Info -->
+
+
+
+  <div class="four_info"><!-- 4 Info -->
+    <div class="info_subtitle">
+      <h3>
+        Share Your Legends
+      </h3>
+
+      <h4 class="info_blurb">
+        Share your own sports legends. We are all legends.      </h4>
+
+    </div>
+
+</div> <!--close 4 Info -->
+
+
+</div><!-- Close Big Info -->
+
+</div><!-- Closes more info -->
 
 
 
