--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <link rel="stylesheet" type="text/css" href="index_styles.css">
-
+  <script src="myscripts.js"></script>
 <title> Sports </title>
 </head>
 
@@ -24,7 +24,6 @@
 <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-instagram"></a>
-
 </div>
 
 
@@ -45,8 +44,10 @@
 
   </nav>
 
+  </header>
+
 <div><!-- hero image -->
-<img class="hero_image" src="img/temp_logo.png">
+<img class="hero_image" src="img/background.jpg">
 
 </div>
 
@@ -75,9 +76,40 @@
 </div><!-- close text -->
 </div><!-- Closes project -->
 
-<div> <!-- slideshow -->
+<!-- Slideshow container -->
+<div class="slideshow-container">
 
-</div><!-- Closes slideshow -->
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="img/slideshow/dog_1.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="img/slideshow/dog_2.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="img/slideshow/dog_3.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
 
 
 
@@ -126,19 +158,22 @@ This project can’t be done without the help and support of our many followers.
     Gala
   </h2>
 
-<div class="big_info"><!-- Big Info -->
+
+
+
+<div class="big_info"> <!-- Big Info -->
 
   <div class="one_info"><!-- 1 Info -->
     <div class="info_subtitle">
       <h3>
         Legends
       </h3>
-
+    </div>
       <h4 class="info_blurb">
         View the sports legends of cleveland history gallery. Learn their stories.
       </h4>
 
-    </div>
+
 
 </div><!-- close 1 Info -->
 
@@ -149,11 +184,11 @@ This project can’t be done without the help and support of our many followers.
       <h3>
         Gala
       </h3>
-
+    </div>
       <h4 class="info_blurb">
         Get tickets, view information, and speakers for our upcoming gala.      </h4>
 
-    </div>
+
 
 </div><!-- close 2 Info -->
 
@@ -164,11 +199,11 @@ This project can’t be done without the help and support of our many followers.
       <h3>
         Donate
       </h3>
-
+    </div>
       <h4 class="info_blurb">
         Donate to our cause and help grow the legend.       </h4>
 
-    </div>
+
 
 </div><!-- close 3 Info -->
 
@@ -179,22 +214,18 @@ This project can’t be done without the help and support of our many followers.
       <h3>
         Share Your Legends
       </h3>
-
+    </div>
       <h4 class="info_blurb">
         Share your own sports legends. We are all legends.      </h4>
 
-    </div>
+
 
 </div> <!--close 4 Info -->
-
-
 </div><!-- Close Big Info -->
-
 </div><!-- Closes more info -->
 
 
 
-  </header>
 
 
 
