Events page rough draft 1

--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 <head>
 
   <link rel="stylesheet" type="text/css" href="events_styles.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title> Sports </title>
 </head>
 
@@ -13,25 +13,34 @@
 <body>
 
   <header>
-      <nav>
+
 
 
 <!-- Social Media -->
 <div class="media">
 <!-- This links icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- Add font awesome icons -->
 <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-instagram"></a>
 
 </div>
-
+  <div class="title">
+    <div class="title-item">&nbsp;</div>
+    <div class="title-item-grow">
+      <div class="logo">
 
 <!-- Logo and header -->
-        <img class="logo" src="img/temp_logo.png">
-        <h1> Sports Legends</h1>
+        <img src="img/temp_logo.png">
+      </div>
+      <h1> Sports Legends</h1>
+    <div class="title-item">&nbsp;</div>
+  </div>
+</div>
+
 <!-- Nav links -->
+  <nav>
       <ul>
         <li><a href="about.html">About</a></li>
         <li><a href="legends.html">Legends</a></li>
@@ -51,11 +60,41 @@
   <div>
     <h2>SPORTS LEGEND BENEFIT GALA</h2>
     <h3>Saturday, October 19 2019  |  6pm - 11pm</h3>
+    <h4>Glasscock Family Ballroom</h4>
+    <h4>2121 Euclid Avenue</h4>
+    <h4>Cleveland, Ohio 44115</h4>
+    <h5>$50.00</h5>
+    <h6>In-person Ticket Purchase: Sale starts on 2/15/2019</h6>
+    <button class="button button3">Tickets</button>
+    <h2>Special Guests & Sports Legends</h2>
+
   </div>
+
+  <div class="people">
+  <div>
+    <div class="person">
+    <img src="img/temp_logo.png" alt="person1">
+    </div>
+    <p>Mahagony Jones</p>
+  </div>
+  <div>
+      <div class="person">
+        <img src="img/temp_logo.png" alt="person2">
+      </div>
+      <p>Harrison Dillard</p>
+    </div>
+    <div>
+      <div class="person">
+        <img src="img/temp_logo.png" alt="person3">
+      </div>
+      <p>Tim McGee</p>
+    </div>
+
+  </div>
+
 
 <footer>
   <nav>
-
   <!-- Social Media -->
   <div class="media">
   <!-- This links icons -->
