Added Champs Images and Text
Added images and text for State Champs.

NEEDS:  Volleyball and Softball PNG icons, possible hover capability.

--- a/legends.html
+++ b/legends.html
@@ -229,62 +229,94 @@
       <div class="profileRow">
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/daveAlbritton.jpg" alt="Dave Albritton">
+            <img src="img/baseball.png" alt="Baseball Champs">
           </div>
-          <p>Dave Albritton</p>
+          <p>BASEBALL</p>
+          <p>2 Wins/1 Runner Up </p>
         </div>
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/nathanBrooks.jpg" alt="Nathan Brooks">
+            <img src="img/basketball.png" alt="Basketball Champs">
           </div>
-          <p>Nathan Brooks</p>
+          <p>BASKETBALL</p>
+          <p>4 Wins/4 Runner Up</p>
         </div>
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+            <img src="img/football.png" alt="Football Champs">
           </div>
-          <p>Harrison Dillard</p>
+          <p>FOOTBALL</p>
+          <p>1 Win/2 Runner Up</p>
         </div>
       </div>
       <div class="profileRow">
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/paulDrayton.png" alt="Otis Paul Drayton">
+            <img src="img/crosscountry.png" alt="Cross Country Champs">
           </div>
-          <p>Paul Drayton</p>
+          <p>CROSS COUNTRY</p>
+          <p>10 Wins/7 Runner Up</p>
         </div>
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/thomasJefferson.jpg" alt="Thomas Jefferson">
+            <img src="img/football.png" alt="Football Champs">
           </div>
-          <p>Thomas Jefferson</p>
+          <p>FOOTBALL</p>
+          <p>1 Win/2 Runner Up</p>
         </div>
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/madelineManningJackson.jpg" alt="Madeline Manning">
+            <img src="img/soccer.png" alt="Soccer Champs">
           </div>
-          <p>Madeline Manning</p>
+          <p>SOCCER</p>
+          <p>0 Wins</p>
         </div>
       </div>
       <div class="profileRow">
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/jesseOwens.jpg" alt="Jesse Owens">
+            <img src="img/baseball.png" alt="SOFTBALL CHAMPS">
           </div>
-          <p>Jesse Owens</p>
+          <p>SOFTBALL</p>
+          <p>0 Wins</p>
         </div>
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/stellaWalsh.jpg" alt="Stella Walsh">
+            <img src="img/tennis.png" alt="Tennis Champs">
           </div>
-          <p>Stella Walsh</p>
+          <p>TENNIS</p>
+          <p>5 Wins/4 Runner Up</p>
         </div>
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+            <img src="img/track.png" alt="Track and Field Champs">
           </div>
-          <p>Harrison Dillard Duplicate</p>
+          <p>TRACK AND FIELD</p>
+          <P>62 Wins/21 Runner Up</p>
         </div>
+      </div>
+        <div class="profileRow">
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/baseball.png" alt="SOFTBALL CHAMPS">
+            </div>
+            <p>VOLLEYBALL</p>
+            <P>0 Wins</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/wrestling.png" alt="WRESTLING CHAMPS">
+            </div>
+            <p>WRESTLING</p>
+            <P>15 Wins/10 Runner Up</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/swimming.png" alt="SWIMMING CHAMPS">
+            </div>
+            <p>SWIMMING</p>
+            <P>0 Wins</p>
+          </div>
       </div>
     </div>
   </section>
