--- a/about.html
+++ b/about.html
@@ -45,6 +45,8 @@
 
 <div class="top">
   <h2> SPORTS LEGENDS OF CLEVELAND</h2>
+  <div class="numbers">
+    <h4> 19   17   1 </h4>
     <p> meet our passionate team of people who are making the CMSD Legends Project happen. Each member an important role ibn the development of this prohect, and work together to shine a light on the legends of this talented city. These dedicated members are the talent behind the cameras, and are comitted every step of the way</p>
   <iframe src="https://player.vimeo.com/video/330524160"  width="1280" height="780" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </div>
