cleaning up the titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="index_styles.css">
-  <script src="myscripts.js"></script>
+
   <title> Sports </title>
 </head>
 
@@ -127,11 +127,11 @@
 </div><!-- Closes Month -->
 
 <div class="join"> <!-- Join -->
-
+  <div>
   <h2 class="join_title">
     Join Our Mission
   </h2>
-
+</div>
   <p class="join_blurb">
       This project can’t be done without the help and support of our many followers. Join the growing numbers and become a sponsor of the Sports Legends of Cleveland project by clicking below and donating today to our   campaign. Donations of any and all sizes are welcome and greatly appreciated!
   </p>
@@ -142,11 +142,11 @@
 </div><!-- Closes join -->
 
 <div class="info"><!-- More Info -->
-
-  <h2 class="info_title">
-    More Info
-  </h2>
-
+  <div class="more_info_div">
+    <h2 class="info_title">
+      More Info
+    </h2>
+  </div>
 <div class="big_info"> <!-- Big Info -->
 
   <div class="one_info"><!-- 1 Info -->
@@ -214,7 +214,7 @@
 
 
 
-
+<script src="myscripts.js"></script>
 </body>
 
 </html>
