Events page update
Social media updated!

--- a/events.html
+++ b/events.html
@@ -60,12 +60,25 @@
   <div>
     <h2>SPORTS LEGEND BENEFIT GALA</h2>
     <h3>Saturday, October 19 2019  |  6pm - 11pm</h3>
+
+    <div class="largemedia">
+      <div class="icon">
+        <img src="img/facebook_circle.png" alt="facebook">
+      </div>
+      <div class="icon">
+        <img src="img/Twitter_circle.png" alt="Twitter">
+      </div>
+      <div class="icon">
+        <img src="img/Instagram_circle.png" alt="Instagram">
+      </div>
+    </div>
+
     <h4>Glasscock Family Ballroom</h4>
     <h4>2121 Euclid Avenue</h4>
     <h4>Cleveland, Ohio 44115</h4>
     <h5>$50.00</h5>
+    <button class="button button3">Tickets!</button>
     <h6>In-person Ticket Purchase: Sale starts on 2/15/2019</h6>
-    <button class="button button3">Tickets</button>
     <h2>Special Guests & Sports Legends</h2>
 
   </div>
@@ -73,23 +86,26 @@
   <div class="people">
   <div>
     <div class="person">
-    <img src="img/temp_logo.png" alt="person1">
+    <img src="img/Square_Dillard.jpg" alt="person1">
     </div>
-    <p>Mahagony Jones</p>
+    <p>Harrison Dillard</p>
   </div>
   <div>
       <div class="person">
-        <img src="img/temp_logo.png" alt="person2">
+        <img src="img/Square_Jones.jpg" alt="person2">
       </div>
-      <p>Harrison Dillard</p>
+      <p>Mahagony Jones</p>
     </div>
     <div>
       <div class="person">
-        <img src="img/temp_logo.png" alt="person3">
+        <img src="img/Square_McGee.jpg" alt="person3">
       </div>
       <p>Tim McGee</p>
     </div>
 
+  </div>
+  <div>
+    <h4>And More!</h4>
   </div>
 
 
