All Olympians added in alphabetical order.  NEEDS:  links to olympic site

--- a/legends.html
+++ b/legends.html
@@ -79,7 +79,8 @@
             <div class="circularImage">
               <img src="img/daveAlbritton.jpg" alt="Dave Albritton">
             </div>
-            <p>Dave Albritton</p>
+            <p>Dave Albritton (1936)</p>
+            <p>East Tech (Track)</p>
             <div id="daveAlbritton" class="moreInfo">
               <p onclick="$('#daveAlbritton').toggle()">
                 MORE INFO
@@ -88,55 +89,125 @@
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/nathanBrooks.jpg" alt="Nathan Brooks">
+              <img src="img/carmenBarth.jpg" alt="Carmen Barth">
             </div>
-            <p>Nathan Brooks</p>
+            <p>Carmen Barth (1932)</p>
+            <p>Collinwood (Boxing)</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+              <img src="img/nathanBrooks.jpg" alt="Nathan Brooks">
             </div>
-            <p>Harrison Dillard</p>
+            <p>Nathan Brooks (1952)</p>
+            <p>Adams (Boxing)
           </div>
         </div>
         <div class="profileRow">
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/paulDrayton.png" alt="Otis Paul Drayton">
+              <img src="img/medalLogo.jpg" alt="medalLogo">
             </div>
-            <p>Paul Drayton</p>
+            <p>Vivan Dolores Brown(1964)</p>
+            <p>East Tech (Athletics)</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="dartanyonCrockett.jpg" alt="dcrock">
+            </div>
+            <p>Dartanyon Crockett (2012)</p>
+            <p>Lincon-West (Paralympic Judo)</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+            </div>
+            <p>Harrison Dillard (1948, 1952)</p>
+            <p>East Tech (Track)</p>
+          </div>
+        </div>
+        <div class="profileRow">
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/paulDrayton.png" alt="Paul Drayton">
+            </div>
+            <p>Paul Otis Drayton (1964)</p>
+            <p>Cathedral Latin (Track)</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/paulFina.jpg" alt="Paul Fina">
+            </div>
+            <p>Paul Fina (1940,1944)</p>
+            <p>East Tech (Gymnastics)</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
               <img src="img/thomasJefferson.jpg" alt="Thomas Jefferson">
             </div>
-            <p>Thomas Jefferson</p>
-          </div>
-          <div class="profileImage">
-            <div class="circularImage">
-              <img src="img/madelineManningJackson.jpg" alt="Madeline Manning">
-            </div>
-            <p>Madeline Manning</p>
+            <p>Thomas Jefferson (1984)</p>
+            <p>Marshall (Track)</p>
           </div>
         </div>
         <div class="profileRow">
           <div class="profileImage">
             <div class="circularImage">
+              <img src="img/madelineManningJackson.jpg" alt="Madeline">
+            </div>
+            <p>Madeline Manning Jackson ('68, '72, '76)')</p>
+            <p>John Hay (Track)</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/louisLauria.JPG" alt="Louis">
+            </div>
+            <p>Louis Lauria (1936)</p>
+            <p>East Tech (Boxing)</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/eleanorMontgomery.jpg" alt="Elanor Montgomery">
+            </div>
+            <p>Eleanor Montgomery ('64,'68)</p>
+            <p>Adams (Track)</p>
+          </div>
+        </div>
+        <div class="profileRow">
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/tocarraMontgomeryprofile.jpg" alt="Tocarra Montgomery">
+            </div>
+            <p>Tocarra Montgomery (2004)</p>
+            <p>East Tech (Wrestling)</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
               <img src="img/jesseOwens.jpg" alt="Jesse Owens">
             </div>
-            <p>Jesse Owens</p>
+            <p>Jesse Owens (1936)</p>
+            <p>East Tech (Track)</p>
           </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/medalLogo.jpg" alt="Medal Logo">
+            </div>
+            <p>Cynthia Bernice Robinson (1948)</p>
+            <p>Adams (Track)</p>
+          </div>
+        </div>
+        <div class="profileRow">
           <div class="profileImage">
             <div class="circularImage">
               <img src="img/stellaWalsh.jpg" alt="Stella Walsh">
             </div>
-            <p>Stella Walsh</p>
+            <p>Stella Walsh ('32, '36)</p>
+            <p>South (Track)</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+              <img src="img/jackWilson.jpg" alt="Jack Wilson">
             </div>
-            <p>Harrison Dillard Duplicate</p>
+            <p>Jack Wilson (1936)</p>
+            <p>East Tech (Boxing)</p>
           </div>
         </div>
       </div>
@@ -155,61 +226,63 @@
         <div class="profileRow">
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/daveAlbritton.jpg" alt="Dave Albritton">
+              <img src="img/medalLogo.jpg" alt="medal">
             </div>
-            <p>Dave Albritton</p>
+            <p>Estus Newberry</p>
+            <p>1956 East Tech</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/nathanBrooks.jpg" alt="Nathan Brooks">
+              <img src="img/medalLogo.jpg" alt="medal">
             </div>
-            <p>Nathan Brooks</p>
+            <p>Robert Ware</p>
+            <p>1972 Glenview</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+              <img src="img/medalLogo.jpg" alt="medal">
             </div>
-            <p>Harrison Dillard</p>
-          </div>
-        </div>
-        <div class="profileRow">
-          <div class="profileImage">
-            <div class="circularImage">
-              <img src="img/paulDrayton.png" alt="Otis Paul Drayton">
-            </div>
-            <p>Paul Drayton</p>
-          </div>
-          <div class="profileImage">
-            <div class="circularImage">
-              <img src="img/thomasJefferson.jpg" alt="Thomas Jefferson">
-            </div>
-            <p>Thomas Jefferson</p>
-          </div>
-          <div class="profileImage">
-            <div class="circularImage">
-              <img src="img/madelineManningJackson.jpg" alt="Madeline Manning">
-            </div>
-            <p>Madeline Manning</p>
+            <p>Ron Addison</p>
+            <p>1976 Rhodes</p>
           </div>
         </div>
         <div class="profileRow">
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/jesseOwens.jpg" alt="Jesse Owens">
+              <img src="img/medalLogo.jpg" alt="medal">
             </div>
-            <p>Jesse Owens</p>
+            <p>Harold Maddox</p>
+            <p>1988 Adams</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/stellaWalsh.jpg" alt="Stella Walsh">
+              <img src="img/medalLogo.jpg" alt="medal">
             </div>
-            <p>Stella Walsh</p>
+            <p>LeShaunte Edwards</p>
+            <p>1996 Rhodes</p>
           </div>
           <div class="profileImage">
             <div class="circularImage">
-              <img src="img/harrisonDillard.jpg" alt="Harrison Dillard">
+              <img src="img/medalLogo.jpg" alt="medal">
             </div>
-            <p>Harrison Dillard Duplicate</p>
+            <p>Willie Hibbler</p>
+            <p>1996 East Tech</p>
+          </div>
+        </div>
+        <div class="profileRow">
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/medalLogo.jpg" alt="medal">
+            </div>
+            <p>Aki Bradley</p>
+            <p>1996 East Tech</p>
+          </div>
+          <div class="profileImage">
+            <div class="circularImage">
+              <img src="img/medalLogo.jpg" alt="medal">
+            </div>
+            <p>Mahogany Jones</p>
+            <p>2016 Rhodes</p>
           </div>
         </div>
       </div>
