Fixed links changed background to grey added drop shadow

--- a/legends.html
+++ b/legends.html
@@ -65,7 +65,7 @@
     <div>
       <button class="button">TELL YOUR STORY</button>
     </div>
-  </a>d
+  </a>
     <h2>
       ATHLETES
     </h2>
@@ -105,7 +105,7 @@
             </a>
             </div>
             <p>Nathan Brooks (1952)</p>
-            <p>Adams (Boxing)
+            <p>Adams (Boxing)</p>
           </div>
         </div>
         <div class="profileRow">
@@ -189,6 +189,7 @@
             <div class="circularImage">
               <a href="https://www.olympic.org/eleanor-montgomery">
               <img src="img/eleanorMontgomery.jpg" alt="Elanor Montgomery">
+            </a>
             </div>
             <p>Eleanor Montgomery ('64,'68)</p>
             <p>Adams (Track)</p>
