final content touches

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="img/slideshow/dog_1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <img src="img/slideshow/slideshow1.jpg" style="width:100%">
+    <div class="text">Two Cleveland Heros</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="img/slideshow/dog_.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <img src="img/slideshow/slideshow2.jpg" style="width:100%">
+    <div class="text">Betty Robinson Jumps Hurdles</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="img/slideshow/dog_3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img src="img/slideshow/slideshow3.jpg" style="width:100%">
+    <div class="text">Winning Gold</div>
   </div>
 
   <!-- Next and previous buttons -->
@@ -129,7 +129,7 @@
 <div class="join"> <!-- Join -->
   <div>
   <h2 class="join_title">
-    Join Our Mission
+    JOIN OUR MISSION
   </h2>
 </div>
   <p class="join_blurb">
@@ -144,7 +144,7 @@
 <div class="info"><!-- More Info -->
   <div class="more_info_div">
     <h2 class="info_title">
-      More Info
+      MORE INFO
     </h2>
   </div>
 <div class="big_info"> <!-- Big Info -->
@@ -155,11 +155,15 @@
         Legends
       </h3>
     </div>
+    <div>
       <h4 class="info_blurb">
         View the sports legends of cleveland history gallery. Learn their stories.
       </h4>
+    </div>
 
-
+    <p class="info_button">
+      More
+    </p>
 
 </div><!-- close 1 Info -->
 
@@ -171,14 +175,20 @@
         Gala
       </h3>
     </div>
+
+    <div>
       <h4 class="info_blurb">
         Get tickets, view information, and speakers for our upcoming gala.      </h4>
+      </div>
 
-
+      <p class="info_button">
+        Tickets
+      </p>
 
 </div><!-- close 2 Info -->
 
-
+</div><!-- Close Big Info -->
+<div class="big_info"> <!-- Big Info -->
 
   <div class="three_info"><!-- 3 Info -->
     <div class="info_subtitle">
@@ -186,10 +196,14 @@
         Donate
       </h3>
     </div>
+    <div>
       <h4 class="info_blurb">
         Donate to our cause and help grow the legend.       </h4>
+      </div>
 
-
+      <p class="info_button">
+        Donate
+      </p>
 
 </div><!-- close 3 Info -->
 
@@ -201,10 +215,14 @@
         Share Your Legends
       </h3>
     </div>
+    <div>
       <h4 class="info_blurb">
         Share your own sports legends. We are all legends.      </h4>
+      </div>
 
-
+      <p class="info_button">
+        Share
+      </p>
 
 </div> <!--close 4 Info -->
 </div><!-- Close Big Info -->
