--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="index_styles.css">
+    <link rel="stylesheet" type="text/css" href="index_styles.css">
 
   <title> Sports </title>
-</head>
+  </head>
 
-<body>
-  <header>
-    <nav>
-      <!-- Social Media -->
-      <div class="media">
 
-      <!-- This links icons -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-      <!-- Add font awesome icons -->
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-instagram"></a>
-      </div>
+  <body>
 
-      <!-- Logo and header -->
-        <img class="logo" src="img/temp_logo.png">
-        <h1> Sports Legends</h1>
+    <header>
+        <nav>
 
-      <!-- Nav links -->
+
+  <!-- Social Media -->
+  <div class="media">
+  <!-- This links icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Add font awesome icons -->
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-instagram"></a>
+
+  </div>
+
+
+  <!-- Logo and header -->
+          <img class="logo" src="img/temp_logo.png">
+          <h1> Sports Legends</h1>
+  <!-- Nav links -->
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="legends.html">Legends</a></li>
@@ -37,8 +41,12 @@
           <li><a href="">Blog</a></li>
           <li><a href="">Share Your Legend</a></li>
         </ul>
+
     </nav>
-  </header>
+
+
+    </header>
+
 
 <!-- hero image -->
 <div>
@@ -234,5 +242,39 @@
 
 <script src="myscripts.js"></script>
 </body>
+<footer>
+  <nav>
+
+  <!-- Social Media -->
+  <div class="media">
+  <!-- This links icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Add font awesome icons -->
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-instagram"></a>
+
+  </div>
+
+
+  <!-- Logo and header -->
+          <img class="logo" src="img/temp_logo.png">
+          <h1> Sports Legends</h1>
+  <!-- Nav links -->
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="legends.html">Legends</a></li>
+          <li><a href="">Donate</a></li>
+          <li><a href="a">Contact</a></li>
+          <li><a href="events.html">Event</a></li>
+          <li><a href="">Store</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Share Your Legend</a></li>
+        </ul>
+
+    </nav>
+</footer>
+
+</html>
 
 </html>
